5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1715_3067.log
== TEST (2019-05-02 16:07:46) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	formula= ((dd1 + dd2 + dd3) * dd4)
	print(formula)

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:03) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(formula)
	
	elif (tipo == "ESPADA" or "espada"):
		fespada= ((dd1 + 6) + (dd2 + 6) + (dd3 + 6) + (dd4 + 6))
		print(fespada)
		

-- ERROR:
File "XXXX", line 11
    elif (tipo == "ESPADA" or "espada"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:18) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(formula)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + 6) + (dd2 + 6) + (dd3 + 6) + (dd4 + 6))
	print(fespada)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(formula)
NameError: name 'formula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:55) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + 6) + (dd2 + 6) + (dd3 + 6) + (dd4 + 6))
	print(fespada)
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:17) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
elif (tipo != "CAUDA" or "cauda"):
	print('Entrada invalida')
	
elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + 6) + (dd2 + 6) + (dd3 + 6) + (dd4 + 6))
	print(fespada)
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:51) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
elif ((tipo != "CAUDA" or "cauda") or (dd1 or dd2 or dd3 or dd4) > 6):
	print('Entrada invalida')
	
elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + 6) + (dd2 + 6) + (dd3 + 6) + (dd4 + 6))
	print(fespada)
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:27:33) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:52) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
	elif (tipo != "CAUDA" or "cauda"):
		print('Entrada invalida')
	
		

-- ERROR:
File "XXXX", line 11
    elif (tipo != "CAUDA" or "cauda"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:21) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
	elif (tipo == "ESPADA" or "espada"):
		fespada= ((dd1 + dd2 + dd3 + dd4) + 24)
		print(fespada)
	
		

-- ERROR:
File "XXXX", line 11
    elif (tipo == "ESPADA" or "espada"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:35) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
	elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + dd2 + dd3 + dd4) + 24)
	print(fespada)
	
		

-- ERROR:
File "XXXX", line 11
    elif (tipo == "ESPADA" or "espada"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:44) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
fespada= ((dd1 + dd2 + dd3 + dd4) + 24)
print(fespada)
	
		

-- ERROR:
File "XXXX", line 12
    fespada= ((dd1 + dd2 + dd3 + dd4) + 24)
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:00) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= ((dd1 + dd2 + dd3) * dd4)
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
fespada= ((dd1 + dd2 + dd3 + dd4 + 24)
print(fespada)
	
		

-- ERROR:
File "XXXX", line 12
    fespada= ((dd1 + dd2 + dd3 + dd4 + 24)
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:11) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
fcauda= ((dd1 + dd2 + dd3) * dd4)
print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
fespada= ((dd1 + dd2 + dd3 + dd4 + 24)
print(fespada)
	
		

-- ERROR:
File "XXXX", line 8
    fcauda= ((dd1 + dd2 + dd3) * dd4)
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:57) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= ((dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
		

-- ERROR:
File "XXXX", line 13
    print(fespada)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:03) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:53) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:44) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
rlif (tipo != )
	
		

-- ERROR:
File "XXXX", line 15
    rlif (tipo != )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:28) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:36:30) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- EXECUTION TIME:
0.154742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3067/main.py", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:32) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:18) 
-- CODE:
tipo= input("ESPADA OU CAUDA? ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:31) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:44) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ")
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda").upper:
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada").upper:
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (tipo == "CAUDA" or "cauda").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:23) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:43) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:58) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + 24)
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:36) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4 + (6*4))
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:21) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + (dd4 + 24))
	print(fespada)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:02) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:42:37) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == "CAUDA" or "cauda"):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == "ESPADA" or "espada"):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:18) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda")):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada")):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != "ESPADA" or "espada").upper:
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    elif (tipo != "ESPADA" or "espada").upper:
AttributeError: 'bool' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:58) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda")):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada")):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada")):
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:10) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda")):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada")):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada")):
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:12) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda")):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada")):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada")):
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- EXECUTION TIME:
0.168607
-- TEST CASE 1:
---- input:
CAUDA
3
5
2
4
---- correct output:
40
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
ESPADA
3
3
3
3
---- correct output:
36
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
ESPAD
3
3
3
3
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:19) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda")):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada")):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada")):
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:56) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda") or (dd1 > 6) or (dd2 > 6) or (dd3 > 6) or (dd4 > 6)):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada") or (dd1 > 6) or (dd2 > 6) or (dd3 > 6) or (dd4 > 6)):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada")):
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda"):
	print("Entrada invalida")
	
		

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:13) 
-- CODE:
tipo= input("ESPADA OU CAUDA?: ").upper
dd1= int(input("Dado 1: "))
dd2= int(input("Dado 2: "))
dd3= int(input("Dado 3: "))
dd4= int(input("Dado 4: "))

if (tipo == ("CAUDA" or "cauda") and (dd1 <= 6) or (dd2 <= 6) or (dd3 <= 6) or (dd4 <= 6)):
	fcauda= (dd1 + dd2 + dd3) * dd4
	print(fcauda)
	
elif (tipo == ("ESPADA" or "espada") and (dd1 <= 6) or (dd2 <= 6) or (dd3 <= 6) or (dd4 <= 6)):
	fespada= (dd1 + dd2 + dd3 + dd4)
	print(fespada + 24)
	
elif (tipo != ("ESPADA" or "espada") or (dd1 > 6) or (dd2 > 6) or (dd3 > 6) or (dd4 > 6)): 
	print("Entrada invalida")
	
elif (tipo != "CAUDA" or "cauda") or dd1 > 6 or dd2 > 6 or dd3 > 6 or dd4 > 6:
	print("Entrada invalida")
	
		

-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
